# Fusion_System_Blocks

./: .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  COMPREHENSIVE_TESTING_PLAN.md  CRITICAL_ISSUES.md  DETAILED_TESTING_DOCUMENTATION.md  FRONTEND_MODULARIZATION_COMPLETE.md  FUSION_DEPLOYMENT_GUIDE.md  Fusion_System_Blocks.manifest  Fusion_System_Blocks.py  IMPROVED_PUBLIC_README.md  LICENSE  MILESTONE_10_TESTING.md  MILESTONE_1_FIXES.md  PERFORMANCE_FIXES_ROUND3.md  PROJECT_FOLDER_STRUCTURE_BLUEPRINT.md  README.md  README_old.md  REPOSITORY_SPLIT_GUIDE.md  SPLIT_SUMMARY.md  TESTING_CHECKLIST.md  commit_public.ps1  copilot-instructions.md  create_beta_release.ps1  pyproject.toml  reorganize_files.ps1  split_repos.ps1  split_repositories.py  tasks.md  test-modular-loading.html  update_public_readme.ps1
.github/: COPILOT_CUSTOMIZATION_SUMMARY.md  copilot-instructions.md
.github/agents/: hlbpa.agent.md  meta-agentic-project-scaffold.agent.md  se-system-architecture-reviewer.agent.md  se-technical-writer.agent.md  se-ux-ui-designer.agent.md
.github/instructions/: diagram-editor-memory.instructions.md  markdown.instructions.md  memory.instructions.md
.github/prompts/: breakdown-test.prompt.md  create-implementation-plan.prompt.md  create-technical-spike.prompt.md  folder-structure-blueprint-generator.prompt.md  python-mcp-server-generator.prompt.md
.github/workflows/: ci.yml
assets/: README.md
core/: __init__.py  action_plan.py  graph_builder.py  models.py  serialization.py  validation.py
docs/: DESIGN_NOTES.md  DETAILED_TESTING_DOCUMENTATION.md  DIAGRAM_DATA_REFACTORING.md  EXHAUSTIVE_FEATURE_SURVEY.md  FUSION_MANUAL_TEST_PLAN.md  IMPORT_GUIDE.md  MILESTONES.md  TESTING_CHECKLIST.md  UI_FEATURE_INVENTORY.md  schema.json
docs/architecture/: ADR-001-monolithic-architecture.md  ADR-002-data-persistence.md  ADR-003-frontend-backend-bridge.md  REVIEW_REPORT.md
docs/ux/: palette-ux-flow.md  palette-ux-journey.md  palette-ux-jtbd.md
examples/: hierarchy_example.md  sample_blocks.csv  sample_connections.csv  sample_mermaid.md
exports/: test_export.h  test_export.md  test_export_pinmap.csv
fsb_core/: __init__.py  action_plan.py  bridge_actions.py  delta.py  graph_builder.py  models.py  requirements.py  serialization.py  validation.py  version_control.py
fusion_addin/: __init__.py  adapter.py  diagnostics.py  document.py  logging_util.py  selection.py
fusion_system_blocks/: __init__.py  main.py
fusion_system_blocks/core/: diagram_data.py
plan/: feature-requirements-verification-1.md
scripts/: build_release.ps1  cleanup_obsolete.ps1  create_beta_release.ps1  create_distribution_package.ps1  create_issues.ps1  deploy_simple.ps1  update_public_readme.ps1
src/: block-templates.js  context-menu-test.html  css-test.html  debug-test.html  diagram_data.py  fusion-icons.css  fusion-ribbon-demo.html  fusion-ribbon.css  fusion-theme.css  main-coordinator.js  main.py  milestone10-demo.html  milestone13-demo.html  milestone14-demo.html  palette.html  palette.js  shapes-demo.html
src/core/: diagram-editor.js  orthogonal-router.js
src/diagram/: __init__.py  cad.py  core.py  export.py  hierarchy.py  rules.py  validation.py
src/features/: advanced-features.js
src/interface/: python-bridge.js
src/types/: block-templates.js  bridge-actions.js  electrical-blocks.js  mechanical-blocks.js  software-blocks.js
src/ui/: diagram-renderer.js  minimap.js  palette-tabs.js  shape-palette.js  toolbar-manager.js
src/utils/: delta-utils.js  html-utils.js  logger.js  pdf-export.js
tests/: conftest.py  test_adapter.py  test_addin_startup.py  test_cad.py  test_core_action_plan.py  test_core_validation.py  test_delta.py  test_diagram_data.py  test_document.py  test_export_reports.py  test_graph_builder.py  test_groups.py  test_hierarchy.py  test_import.py  test_integration.py  test_logging_util.py  test_models.py  test_property_based.py  test_requirements.py  test_rule_checks.py  test_schema.py  test_selection.py  test_serialization.py  test_status_tracking.py  test_validation.py  test_version_control.py
