[project]
name = "fusion-system-blocks"
version = "0.1.1"
description = "Fusion add-in for system block diagrams with pure Python core library"
authors = [
    { name = "Fusion System Blocks Contributors" }
]
readme = "README.md"
license = { text = "Fusion System Blocks Community License v1.1" }
requires-python = ">=3.9"
keywords = ["fusion360", "cad", "system-blocks", "diagram"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Electronic Design Automation (EDA)",
]

dependencies = [
    "jsonschema>=4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "hypothesis>=6.0",
    "mutmut>=2.4",
    "mypy>=1.0",
    "ruff>=0.1.0",
    "pre-commit>=3.0",
]
test = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "hypothesis>=6.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["fsb_core*", "fusion_addin*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "-ra",
]
filterwarnings = [
    "ignore::DeprecationWarning",
]
markers = [
    "unit: Pure unit tests with no I/O or filesystem access",
    "integration: Tests that touch the filesystem or cross module boundaries",
    "slow: Tests that take more than 1 second",
    "serialization: Serialization round-trip and format conversion tests",
    "property_based: Hypothesis property-based / fuzz tests",
]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
exclude = [
    "^fusion_addin/",  # Skip adapter layer (has adsk imports)
]

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # Allow unused imports in __init__.py
"tests/*" = ["B011"]       # Allow assert in tests
"Fusion_System_Blocks.py" = ["E402"]  # sys.path setup before imports

[tool.coverage.run]
source = ["fsb_core"]
omit = [
    "fusion_addin/*",  # Skip adapter layer
    "tests/*",
]

[tool.coverage.report]
fail_under = 80
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]

# ---------------------------------------------------------------------------
# Mutation testing (Phase 7)
# ---------------------------------------------------------------------------
[tool.mutmut]
paths_to_mutate = "fsb_core/"
tests_dir = "tests/"
runner = "python -m pytest -x -q"

